<resources>
    <string name="app_name">虹软</string>
    <string name="title_member">成员</string>
    <string name="title_add">添加</string>
    <string name="title_opendoor">开门</string>

    <!--layout activity_login.xml-->
    <string name="al_hint_account">请输入手机号</string>
    <string name="al_hint_pwd">请输入密码</string>
    <string name="al_family">家庭登录</string>
    <string name="al_visitor">访客登录</string>
    <string name="al_forget">忘记密码？</string>
    <string name="al_imd_regist">立即注册</string>

    <!--layout activity_regist.xml-->
    <string name="ar_regist">注册</string>

    <!--layout activity_main.xml-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--layout item_member_list.xml constant string-->
    <string name="text_default">李涛江</string>
    <string name="iml_last_in">上次进门时间:</string>
    <string name="iml_last_out">上次出门时间:</string>
    <string name="text_default_datetime">无记录</string>
    <string name="iml_back_delete">删除</string>

    <!--layout activity_regist*.xml constant string-->
    <string name="text_back">返回</string>
    <string name="title_basic_info">输入基本信息</string>
    <string name="regist_policy1">注册即代表阅读并同意</string>
    <string name="regist_policy2">使用条款</string>
    <string name="regist_policy3">和</string>
    <string name="regist_policy4">隐私政策</string>
    <string name="ar_name">姓名</string>
    <string name="ar_ID">身份证号</string>
    <string name="ar_phone">手机号</string>
    <string name="ar_next_step">下一步</string>
    <string name="title_face_detecct">采集人脸图像</string>
    <string name="ar_start_detect">开始检测</string>
    <string name="ar_detect_again">重新检测</string>
    <string name="title_bind_housenum">绑定门牌号</string>
    <string name="title_bind_householder">绑定户主</string>
    <string name="ar_hint_housenum">请输入门牌号</string>
    <string name="ar_hint_holderid">户主编号</string>
    <string name="ar_has_doubt">有疑问？</string>
    <string name="ar_finish_regist">完成注册</string>

    <!--layout activity_launch.xml constant string-->
    <string name="al_login">登录</string>
    <string name="al_regist">注册</string>
    <string name="al_holder_regist">户主注册</string>
    <string name="al_member_regist">成员注册</string>
    <string name="al_visitor_regist">访客申请</string>

    <!--layout widget_pop_menu.xml-->
    <string name="wpm_close">X</string>
</resources>
