<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ar_back_height"
        android:drawableLeft="@mipmap/ic_back_grey_24dp"
        android:gravity="center_vertical"
        android:text="@string/text_back"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/colorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_face_detecct"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="200dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@mipmap/ar_def_photo"
            android:scaleType="fitCenter"/>

        <Button
            android:id="@+id/face_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/ar_start_detect"/>

        <Button
            android:id="@+id/go_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/ar_next_step"/>
    </LinearLayout>

</LinearLayout>