<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ar_back_height"
        android:drawableStart="@mipmap/ic_back_grey_24dp"
        android:gravity="center_vertical"
        android:text="@string/text_back"
        android:textSize="@dimen/text_size_18"
        android:textColor="@color/colorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_basic_info"
            android:textSize="@dimen/text_title_size"
            android:textColor="@color/colorBlack" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_policy1"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_policy2"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_policy3"
                android:textColor="@color/colorGrey"/>

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_policy4"
                android:textColor="@color/colorBlue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ar_name"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_size_18"
                android:gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:labelFor="@id/input_name"
                android:layout_gravity="bottom"/>

            <EditText
                android:id="@+id/input_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="@dimen/text_size_18"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/layer_edit_bg"
                android:textCursorDrawable="@drawable/shape_edit_cusor"
                android:paddingBottom="@dimen/custom_edit_vertical_padding"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ar_ID"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_size_18"
                android:gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:labelFor="@id/input_ID"
                android:layout_gravity="bottom"/>

            <EditText
                android:id="@+id/input_ID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="@dimen/text_size_18"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/layer_edit_bg"
                android:textCursorDrawable="@drawable/shape_edit_cusor"
                android:paddingBottom="@dimen/custom_edit_vertical_padding"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ar_phone"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_size_18"
                android:gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:labelFor="@id/input_phone"
                android:layout_gravity="bottom"/>

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="@dimen/text_size_18"
                android:inputType="phone"
                android:maxLines="1"
                android:background="@drawable/layer_edit_bg"
                android:textCursorDrawable="@drawable/shape_edit_cusor"
                android:paddingBottom="@dimen/custom_edit_vertical_padding"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <Button
            android:id="@+id/go_next"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/ar_next_step"
            style="@style/custom_btn_style"
            android:background="@drawable/ripple_btn_red_rdcor_bg"
            android:textColor="@color/slct_btn_red_text"/>

    </LinearLayout>
</LinearLayout>