<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/close"
        android:layout_width="@dimen/wpm_close_view_size"
        android:layout_height="@dimen/wpm_close_view_size"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/wpm_close"
        android:gravity="center"
        android:textSize="@dimen/wpm_close_text_size"
        android:textColor="@color/colorRed"
        android:clickable="true"/>

    <LinearLayout
        android:id="@+id/btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_holder"
            android:layout_width="match_parent"
            android:text="@string/al_holder_regist"
            style="@style/custom_btn_style"
            android:background="@drawable/ripple_btn_cyan_bg"
            android:textColor="@color/slct_btn_cyan_text" />

        <Button
            android:id="@+id/btn_member"
            android:layout_width="match_parent"
            android:text="@string/al_member_regist"
            style="@style/custom_btn_style"
            android:background="@drawable/ripple_btn_cyan_bg"
            android:textColor="@color/slct_btn_cyan_text"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btn_visitor"
            android:layout_width="match_parent"
            android:text="@string/al_visitor_regist"
            style="@style/custom_btn_style"
            android:background="@drawable/ripple_btn_cyan_bg"
            android:textColor="@color/slct_btn_cyan_text"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>
</RelativeLayout>