<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/al_account"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/al_top_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/al_top_margin"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/al_hint_account"
        android:focusedByDefault="true"
        app:layout_constraintLeft_toRightOf="@id/iv_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread"/>

    <ImageView
        android:id="@+id/iv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/al_pwd"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_account"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/al_hint_account"
        android:focusedByDefault="true"
        app:layout_constraintLeft_toRightOf="@id/iv_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_account"
        app:layout_constraintWidth_default="spread"/>

    <Button
        android:id="@+id/bt_family"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/al_family"
        android:layout_marginTop="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintTop_toBottomOf="@id/iv_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="spread"/>

    <Button
        android:id="@+id/bt_visitor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/al_visitor"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintTop_toBottomOf="@id/bt_family"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/al_forget"
        app:layout_constraintTop_toBottomOf="@id/bt_visitor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>